WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
168861
WebAssembly: miscellaneous spec fixes part deux
https://bugs.webkit.org/show_bug.cgi?id=168861
Summary
WebAssembly: miscellaneous spec fixes part deux
JF Bastien
Reported
2017-02-24 17:39:06 PST
More random fixes following
bug #168822
(but totally independent).
Attachments
patch
(17.25 KB, patch)
2017-02-24 17:47 PST
,
JF Bastien
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
JF Bastien
Comment 1
2017-02-24 17:47:18 PST
Created
attachment 302717
[details]
patch
Keith Miller
Comment 2
2017-02-27 08:27:03 PST
r=me.
WebKit Commit Bot
Comment 3
2017-02-27 08:54:38 PST
Comment on
attachment 302717
[details]
patch Clearing flags on attachment: 302717 Committed
r213067
: <
http://trac.webkit.org/changeset/213067
>
WebKit Commit Bot
Comment 4
2017-02-27 08:54:42 PST
All reviewed patches have been landed. Closing bug.
Saam Barati
Comment 5
2017-02-27 10:56:41 PST
Comment on
attachment 302717
[details]
patch View in context:
https://bugs.webkit.org/attachment.cgi?id=302717&action=review
> JSTests/wasm.yaml:136 > + cmd: runWebAssemblySpecTest :skip # FIXME This test is mostly blocked on implementing re-exporting an import.
https://bugs.webkit.org/show_bug.cgi?id=165510
Style nit: "FIXME" should have a colon after it I believe.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug