WebAssembly: miscellaneous spec fixes part deux https://bugs.webkit.org/show_bug.cgi?id=168861

Reviewed by Keith Miller.

JSTests:

* wasm.yaml: more passing tests
* wasm/Builder.js: use a Map instead of an Object for the function
index space, because Number entries such as 0 were colliding with
string entries such as "0". This in turn requires some hashing of
objects which are inserted, because Map uses Object's insertion
order when comparing.
(export.default.Builder):
(export.default.Builder.prototype._functionIndexSpaceKeyHash):
(export.default.Builder.prototype._registerFunctionToIndexSpace):
(export.default.Builder.prototype._getFunctionFromIndexSpace):
* wasm/js-api/test_Instance.js: add a FIXME test
* wasm/spec-tests/memory.wast.js:
(assert_unlinkable):
* wasm/spec-tests/names.wast.js:

Source/JavaScriptCore:

* wasm/WasmFunctionParser.h: add some FIXME


Canonical link: https://commits.webkit.org/185905@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@213067 268f45cc-cd09-0410-ab3c-d52691b4dbfc